--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <link rel="icon" href="../images/favicon.png" type="image/x-icon">
+    <meta name="description" content="William James - Portfolio showcasing web development projects, skills, and contact information.">
+    <meta name="keywords" content="William James, portfolio, web developer, projects, contact, front-end, mathematics student">
+    <meta name="author" content="William James">
     <title>Portfolio Website</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='../css/style.css'>
