--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                                 <i class="fas fa-map-marker-alt"></i>
                                 <div class="info">
                                     <div class="head">Address</div>
-                                    <div class="sub-title">Queens Street, Aukland, New Zealand</div>
+                                    <div class="sub-title">Manapparai, Trichy, Tamil Nadu, India 621 306.</div>
                                 </div>
                             </div>
                         </div>
